# ffigen_app

./: .metadata  README.md  pubspec.yaml
example/: pubspec.yaml
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Runner/: DebugProfile.entitlements  Release.entitlements
example/macos/Runner.xcodeproj/: project.pbxproj
lib/: ffigen_app.dart
macos/Classes/: duktape.c
src/: CMakeLists.txt
